--- a/non_supervised_analysis/notebooks/dataset_1/_0_citibike_pre_processing.ipynb
+++ b/non_supervised_analysis/notebooks/dataset_1/_0_citibike_pre_processing.ipynb
@@ -1601,7 +1601,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Cleaning/Transformation"
+    "# Data Cleaning/Transformation\n",
+    "\n",
+    "- Feature Engineering steps\n",
+    "    - In this project, we have the main dataset (df) with data for each ride in citybike system. In order to enrich the analysis, we decided to cross join this data with hourly meteorological conditions, to understand how the weather may influence the rides in citybike.\n",
+    "- Add new features\n",
+    "    -   Spacial:\n",
+    "        - Start station borough (bronx, queens, manathan,...)\n",
+    "        - End station borough (bronx, queens, manathan,...)\n",
+    "\n",
+    "    - Time \n",
+    "        - is_weekend (0 or 1)\n",
+    "        - time_of_day - lunch time, early afternoon, evening..\n",
+    "        - day_of_week - staruday, friday, thursday\n",
+    "        - hour\n",
+    "    - Ride Information:\n",
+    "        - ride_duration - The total duration of the ride in seconds.\n",
+    "        - ride_avg_speed -  The average speed of the ride calculated using the geodesic distance and ride duration (km/h).\n",
+    "    - Weather\n",
+    "        - weather_desc: The weather conditions during the ride (e.g., Overcast, Clear sky, Rainy).\n",
+    "        rain: The amount of rain (in mm) during the ride.\n",
+    "        - temperature: The temperature (in °C) during the ride.\n",
+    "        - .....\n",
+    "\n",
+    "- Remove id columns: make sure to remove id columns from the df"
    ]
   },
   {
@@ -7954,6 +7977,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Removing columns with IDs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#drop id columns that are not relevant for the analysis\n",
+    "\n",
+    "df = df.drop(columns=['category_code_lvl_1_filled','event_type','event_time','category_code','user_session','user_id'])\n",
+    "\n",
+    "display(df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Data Exploration"
    ]
   },
@@ -7996,57 +8039,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Encoding Excel File"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: property 'book' of 'OpenpyxlWriter' object has no setter\n",
-      "The file might be corrupt or invalid. Creating a new file.\n",
-      "Excel file has been updated successfully.\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "# Define the groups of columns for hierarchical encoding, grouped by sheet name\n",
-    "columns_to_save = {\n",
-    "    \n",
-    "    'product_name' : ['product_id', 'product_name'],  \n",
-    "    'aisle' : ['department_id', 'department','aisle_id', 'aisle'],\n",
-    "    'department' : ['department_id', 'department'],\n",
-    "\n",
-    "}\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Save the distinct values combinations of each column group into corresponding sheets\n",
-    "append_columns_to_excel(enriched_data, columns_to_save, f'data/citibike_pre_encoding.xlsx')\n",
-    "\n",
-    "print(\"Excel file has been updated successfully.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Final df to csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv('data/city_bike_pre_proc.csv',index=False)"
+    "df.to_csv('data/city_bike_pre_proc.csv',index=False)"
    ]
   },
   {
@@ -8286,58 +8288,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3193597, 32)"
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "weather_description\n",
-       "Overcast             42.801925\n",
-       "Clear sky            27.268312\n",
-       "Mainly clear          9.450190\n",
-       "Drizzle: Light        7.703320\n",
-       "Partly cloudy         7.468319\n",
-       "Drizzle: Moderate     3.060154\n",
-       "Rain: Slight          1.459326\n",
-       "Drizzle: Dense        0.434557\n",
-       "Rain: Moderate        0.353896\n",
-       "Name: proportion, dtype: float64"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "df['weather_description'].value_counts()\n",
-    "\n",
-    "weather_counts_percentage = df['weather_description'].value_counts(normalize=True) * 100\n",
-    "display(weather_counts_percentage)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8349,13 +8299,12 @@
    "metadata": {},
    "source": [
     "- Sampling on the main file. Or just get data from 3 months of the year like (march, april, may)\n",
-    "- Add boroughs to the city bike data\n",
+    "- Add boroughs to the city bike data (DONE)\n",
     "    ask chatgpt to get borough name (queens, manathan, bronx,...) with the station name\n",
-    "- Add point of interest near each station, makes sense?\n",
     "- Neste dataset, juntar info de distancias das viagens, e vais ter a possibilidade de ter a velocidade na viagem (vigens mais rápidas ou mais lentas)\n",
-    "    - Para juntar as distancias, tentar obter através da api do Open street map. Api que consegues calcular as distancias entre as distancias da estacao inicial e final\n",
+    "    - Para juntar as distancias, tentar obter através da api do Open street map. Api que consegues calcular as distancias entre as distancias da estacao inicial e final (DONE)\n",
     "        - considerar colunas start_lat, start_lng,\tend_lat, end_lng\n",
-    "    - Pedir ao João para ver como obter este calculo das distancias"
+    "- REMOVER COLUNAS IDs do dataset antes do data profiling - TO DOOOO"
    ]
   },
   {
