--- a/non_supervised_analysis/notebooks/dataset_1/_2_citibike_data_prep_enconding.ipynb
+++ b/non_supervised_analysis/notebooks/dataset_1/_2_citibike_data_prep_enconding.ipynb
@@ -88,7 +88,7 @@
    "source": [
     "\n",
     "#get file from data pre processing notebook. This file has all the column we need to start the data profiling phase\n",
-    "filepath = r'data/city_bike_pre_proc.csv'\n",
+    "filepath = r'data/citi_bike_pre_proc.csv'\n",
     "\n",
     "excel_mapping_filepath=r'data/citi_bike_values_encoded.xlsx'\n",
     "\n",
@@ -748,7 +748,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ordinal enconding\n",
+    "## Ordinal enconding\n",
     "\n",
     "For these variables, they are cyclical. However, as we only have data for 1 month in our dataset, there are some variables that will not repeat in our dataset. So for this variables will make the hierarchy according to the proximity in time of the values:\n",
     "Ex: week 1, is more close to week 2, than to week 5\n",
@@ -1360,7 +1360,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Cyclical enconding\n",
+    "## Cyclical enconding\n",
     "- We have variables, time variables, that are cyclical, meaning that the values of the variables can repeat over time. \n",
     "    - day_of_week\n",
     "    - time_of_day\n",
@@ -3281,7 +3281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Dummyifcation enconding\n",
+    "## Dummyifcation enconding\n",
     "- Apply dummyification method to the following variables:\n",
     "    - start_borough\n",
     "    - end_borough\n",
@@ -3595,7 +3595,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## correlation matrix  after enconding"
+    "# correlation matrix  after enconding"
    ]
   },
   {
@@ -3685,7 +3685,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save final df from Data preparation - ENCODING into a csv file\n",
+    "# Save final df from Data preparation - ENCODING into a csv file\n",
     "- We will use this dataset for the missing alues"
    ]
   },
