--- a/non_supervised_analysis/notebooks/dataset_1/_0_citibike_pre_processing.ipynb
+++ b/non_supervised_analysis/notebooks/dataset_1/_0_citibike_pre_processing.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +937,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[276], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m test_data:\n\u001b[1;32m      8\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(filepath, na_values\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 9\u001b[0m     df: DataFrame \u001b[38;5;241m=\u001b[39m df_main\u001b[38;5;241m.\u001b[39msample(frac \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.08\u001b[39m, replace \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     11\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(filepath, na_values\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[11], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m test_data:\n\u001b[1;32m      8\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(filepath, na_values\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 9\u001b[0m     df: DataFrame \u001b[38;5;241m=\u001b[39m df_main\u001b[38;5;241m.\u001b[39msample(frac \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.08\u001b[39m, replace \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     11\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(filepath, na_values\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[0;31mNameError\u001b[0m: name 'df_main' is not defined"
      ]
     }
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1390,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1648,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1985,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2654,7 +2654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2664,7 +2664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2988,7 +2988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3338,7 +3338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -3528,7 +3528,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 285,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3542,7 +3542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3799,7 +3799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -4031,7 +4031,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4045,7 +4045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -4269,7 +4269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -4991,7 +4991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -5213,7 +5213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -5485,7 +5485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -5687,7 +5687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -5708,7 +5708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -5720,7 +5720,7 @@
        "       'Rain: Slight', 'Rain: Moderate', 'Rain: Heavy'], dtype=object)"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6221,7 +6221,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ride_id</th>\n",
+       "      <th>rideable_type</th>\n",
+       "      <th>started_at</th>\n",
+       "      <th>ended_at</th>\n",
+       "      <th>start_station_name</th>\n",
+       "      <th>start_station_id</th>\n",
+       "      <th>end_station_name</th>\n",
+       "      <th>end_station_id</th>\n",
+       "      <th>start_lat</th>\n",
+       "      <th>start_lng</th>\n",
+       "      <th>end_lat</th>\n",
+       "      <th>end_lng</th>\n",
+       "      <th>member_casual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>F561526822C9D60B</td>\n",
+       "      <td>electric_bike</td>\n",
+       "      <td>2024-04-27 13:56:13.940</td>\n",
+       "      <td>2024-04-27 14:05:23.629</td>\n",
+       "      <td>FDR Drive &amp; E 35 St</td>\n",
+       "      <td>6230.04</td>\n",
+       "      <td>E 10 St &amp; 2 Ave</td>\n",
+       "      <td>5746.02</td>\n",
+       "      <td>40.743955</td>\n",
+       "      <td>-73.971391</td>\n",
+       "      <td>40.729708</td>\n",
+       "      <td>-73.986598</td>\n",
+       "      <td>member</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>359BAF91507F4998</td>\n",
+       "      <td>electric_bike</td>\n",
+       "      <td>2024-04-25 15:23:14.529</td>\n",
+       "      <td>2024-04-25 15:27:52.895</td>\n",
+       "      <td>Forsyth St &amp; Grand St</td>\n",
+       "      <td>5382.07</td>\n",
+       "      <td>E 10 St &amp; 2 Ave</td>\n",
+       "      <td>5746.02</td>\n",
+       "      <td>40.717741</td>\n",
+       "      <td>-73.993388</td>\n",
+       "      <td>40.729708</td>\n",
+       "      <td>-73.986598</td>\n",
+       "      <td>member</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AAEE95A1C0106C97</td>\n",
+       "      <td>electric_bike</td>\n",
+       "      <td>2024-04-06 11:15:18.132</td>\n",
+       "      <td>2024-04-06 11:22:10.081</td>\n",
+       "      <td>E 20 St &amp; 2 Ave</td>\n",
+       "      <td>5971.08</td>\n",
+       "      <td>Mott St &amp; Prince St</td>\n",
+       "      <td>5561.04</td>\n",
+       "      <td>40.735790</td>\n",
+       "      <td>-73.981693</td>\n",
+       "      <td>40.723180</td>\n",
+       "      <td>-73.994800</td>\n",
+       "      <td>member</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>95B077C9C619D404</td>\n",
+       "      <td>electric_bike</td>\n",
+       "      <td>2024-04-06 16:19:25.749</td>\n",
+       "      <td>2024-04-06 16:21:43.098</td>\n",
+       "      <td>Eastern Pkwy &amp; Washington Ave</td>\n",
+       "      <td>3928.08</td>\n",
+       "      <td>Eastern Pkwy &amp; Franklin Ave (SW Corner)</td>\n",
+       "      <td>3919.12</td>\n",
+       "      <td>40.671649</td>\n",
+       "      <td>-73.963115</td>\n",
+       "      <td>40.670529</td>\n",
+       "      <td>-73.958222</td>\n",
+       "      <td>member</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1A33C864454C4692</td>\n",
+       "      <td>electric_bike</td>\n",
+       "      <td>2024-04-10 17:40:14.700</td>\n",
+       "      <td>2024-04-10 17:48:11.571</td>\n",
+       "      <td>W 27 St &amp; 6 Ave</td>\n",
+       "      <td>6215.07</td>\n",
+       "      <td>E 25 St &amp; 1 Ave</td>\n",
+       "      <td>6004.07</td>\n",
+       "      <td>40.745446</td>\n",
+       "      <td>-73.990591</td>\n",
+       "      <td>40.738177</td>\n",
+       "      <td>-73.977387</td>\n",
+       "      <td>member</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            ride_id  rideable_type               started_at  \\\n",
+       "0  F561526822C9D60B  electric_bike  2024-04-27 13:56:13.940   \n",
+       "1  359BAF91507F4998  electric_bike  2024-04-25 15:23:14.529   \n",
+       "2  AAEE95A1C0106C97  electric_bike  2024-04-06 11:15:18.132   \n",
+       "3  95B077C9C619D404  electric_bike  2024-04-06 16:19:25.749   \n",
+       "4  1A33C864454C4692  electric_bike  2024-04-10 17:40:14.700   \n",
+       "\n",
+       "                  ended_at             start_station_name start_station_id  \\\n",
+       "0  2024-04-27 14:05:23.629            FDR Drive & E 35 St          6230.04   \n",
+       "1  2024-04-25 15:27:52.895          Forsyth St & Grand St          5382.07   \n",
+       "2  2024-04-06 11:22:10.081                E 20 St & 2 Ave          5971.08   \n",
+       "3  2024-04-06 16:21:43.098  Eastern Pkwy & Washington Ave          3928.08   \n",
+       "4  2024-04-10 17:48:11.571                W 27 St & 6 Ave          6215.07   \n",
+       "\n",
+       "                          end_station_name end_station_id  start_lat  \\\n",
+       "0                          E 10 St & 2 Ave        5746.02  40.743955   \n",
+       "1                          E 10 St & 2 Ave        5746.02  40.717741   \n",
+       "2                      Mott St & Prince St        5561.04  40.735790   \n",
+       "3  Eastern Pkwy & Franklin Ave (SW Corner)        3919.12  40.671649   \n",
+       "4                          E 25 St & 1 Ave        6004.07  40.745446   \n",
+       "\n",
+       "   start_lng    end_lat    end_lng member_casual  \n",
+       "0 -73.971391  40.729708 -73.986598        member  \n",
+       "1 -73.993388  40.729708 -73.986598        member  \n",
+       "2 -73.981693  40.723180 -73.994800        member  \n",
+       "3 -73.963115  40.670529 -73.958222        member  \n",
+       "4 -73.990591  40.738177 -73.977387        member  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -6454,7 +6619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -6711,7 +6876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -6813,7 +6978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -7075,7 +7240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -7679,7 +7844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -7919,7 +8084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -7995,11 +8160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('data/city_bike_pre_proc.csv',index=False)"
+    "df.to_csv('data/citi_bike_pre_proc.csv',index=False)"
    ]
   },
   {
