--- a/non_supervised_analysis/notebooks/dataset_1/_1_citibike_data_profiling.ipynb
+++ b/non_supervised_analysis/notebooks/dataset_1/_1_citibike_data_profiling.ipynb
@@ -97,7 +97,7 @@
    "source": [
     "\n",
     "#get file from data pre processing notebook. This file has all the column we need to start the data profiling phase\n",
-    "filepath = r'data/city_bike_pre_proc.csv'\n",
+    "filepath = r'data/citi_bike_pre_proc.csv'\n",
     "\n",
     "file_tag = 'Citi Bike'"
    ]
