--- a/non_supervised_analysis/notebooks/dataset_3/2_instacart_clustering.ipynb
+++ b/non_supervised_analysis/notebooks/dataset_3/2_instacart_clustering.ipynb
@@ -756,9 +756,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'users_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m StandardScaler\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Select relevant features for clustering\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m reorder_numeric_features \u001b[38;5;241m=\u001b[39m users_df[numeric_vars]\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# Normalize the data\u001b[39;00m\n\u001b[1;32m      7\u001b[0m scaler \u001b[38;5;241m=\u001b[39m StandardScaler()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'users_df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -1219,24 +1231,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "KMeans Cluster Counts:\n",
-      "kmeans_cluster\n",
-      "0    2785\n",
-      "1    1634\n",
-      "dtype: int64\n",
-      "\n",
-      "Agglomerative Clustering Counts:\n",
-      "agglo_cluster\n",
-      "0    2956\n",
-      "1    1463\n",
-      "dtype: int64\n"
+     "ename": "NameError",
+     "evalue": "name 'users_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Group by kmeans_cluster and count the number of user IDs\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m kmeans_cluster_counts \u001b[38;5;241m=\u001b[39m users_df\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mkmeans_cluster\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39msize()\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Group by agglo_cluster and count the number of user IDs\u001b[39;00m\n\u001b[1;32m      5\u001b[0m agglo_cluster_counts \u001b[38;5;241m=\u001b[39m users_df\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124magglo_cluster\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39msize()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'users_df' is not defined"
      ]
     }
    ],
@@ -1808,7 +1814,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
