updated user orders aggregation

--- a/non_supervised_analysis/notebooks/dataset_3/1_instacart_data_profiling.ipynb
+++ b/non_supervised_analysis/notebooks/dataset_3/1_instacart_data_profiling.ipynb
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2895,7 +2895,7 @@
     "# Display the resulting dataframes as HTML tables\n",
     "for col, df in grouped_dataframes.items():\n",
     "    display(HTML(f\"<h3>Group by {col}</h3>\"))\n",
-    "    display(df)"
+    "    display(df.head(20))"
    ]
   },
   {
