--- a/non_supervised_analysis/notebooks/dataset_2/0_preproc.ipynb
+++ b/non_supervised_analysis/notebooks/dataset_2/0_preproc.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bakery_sales = bakery_sales.drop(['croque monsieur', 'mad garlic'], axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +69,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 2654 entries, 0 to 2653\n",
-      "Data columns (total 27 columns):\n",
+      "Data columns (total 25 columns):\n",
       " #   Column              Non-Null Count  Dtype  \n",
       "---  ------              --------------  -----  \n",
       " 0   datetime            2421 non-null   object \n",
@@ -77,21 +86,19 @@
       " 11  cacao deep          323 non-null    float64\n",
       " 12  pain au chocolat    587 non-null    float64\n",
       " 13  almond croissant    202 non-null    float64\n",
-      " 14  croque monsieur     0 non-null      float64\n",
-      " 15  mad garlic          0 non-null      float64\n",
-      " 16  milk tea            137 non-null    float64\n",
-      " 17  gateau chocolat     196 non-null    float64\n",
-      " 18  pandoro             343 non-null    float64\n",
-      " 19  cheese cake         90 non-null     float64\n",
-      " 20  lemon ade           35 non-null     float64\n",
-      " 21  orange pound        519 non-null    float64\n",
-      " 22  wiener              355 non-null    float64\n",
-      " 23  vanila latte        209 non-null    float64\n",
-      " 24  berry ade           54 non-null     float64\n",
-      " 25  tiramisu            7 non-null      float64\n",
-      " 26  merinque cookies    47 non-null     float64\n",
-      "dtypes: float64(24), object(3)\n",
-      "memory usage: 560.0+ KB\n"
+      " 14  milk tea            137 non-null    float64\n",
+      " 15  gateau chocolat     196 non-null    float64\n",
+      " 16  pandoro             343 non-null    float64\n",
+      " 17  cheese cake         90 non-null     float64\n",
+      " 18  lemon ade           35 non-null     float64\n",
+      " 19  orange pound        519 non-null    float64\n",
+      " 20  wiener              355 non-null    float64\n",
+      " 21  vanila latte        209 non-null    float64\n",
+      " 22  berry ade           54 non-null     float64\n",
+      " 23  tiramisu            7 non-null      float64\n",
+      " 24  merinque cookies    47 non-null     float64\n",
+      "dtypes: float64(22), object(3)\n",
+      "memory usage: 518.5+ KB\n"
      ]
     }
    ],
@@ -101,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +151,7 @@
        "dtype('<M8[ns]')"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +171,7 @@
        "233"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +391,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 36 columns</p>\n",
+       "<p>5 rows × 34 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -416,10 +423,10 @@
        "3    Afternoon  \n",
        "4    Afternoon  \n",
        "\n",
-       "[5 rows x 36 columns]"
+       "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +704,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 35 columns</p>\n",
+       "<p>5 rows × 33 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -729,10 +736,10 @@
        "3    Afternoon  Summer  \n",
        "4    Afternoon  Summer  \n",
        "\n",
-       "[5 rows x 35 columns]"
+       "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +791,7 @@
    "source": [
     "# Define product categories\n",
     "food_items = ['angbutter', 'plain bread', 'jam', 'croissant', \"tiramisu croissant\", \"cacao deep\", \"pain au chocolat\",\n",
-    "              \"almond croissant\", \"croque monsieur\", \"mad garlic\", \"gateau chocolat\", \"pandoro\", \"cheese cake\",\n",
+    "              \"almond croissant\", \"gateau chocolat\", \"pandoro\", \"cheese cake\",\n",
     "              \"orange pound\", \"wiener\", \"tiramisu\", \"merinque cookies\"]  \n",
     "drink_items = ['americano', 'caffe latte', \"milk tea\", \"lemon ade\", \"vanila latte\", \"berry ade\"]     \n",
     "\n",
@@ -802,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +979,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 37 columns</p>\n",
+       "<p>5 rows × 35 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1004,10 +1011,10 @@
        "3             Low                 3  \n",
        "4             Low                 1  \n",
        "\n",
-       "[5 rows x 37 columns]"
+       "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1025,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1202,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 37 columns</p>\n",
+       "<p>5 rows × 35 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1227,10 +1234,10 @@
        "3             Low                 3  \n",
        "4             Low                 1  \n",
        "\n",
-       "[5 rows x 37 columns]"
+       "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
