--- a/non_supervised_analysis/notebooks/dataset_3/1_instacart_data_profiling.ipynb
+++ b/non_supervised_analysis/notebooks/dataset_3/1_instacart_data_profiling.ipynb
@@ -3541,7 +3541,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ist",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -3555,7 +3555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
