updated clustering with chebyshev

--- a/non_supervised_analysis/notebooks/dataset_3/1_instacart_data_profiling USER.ipynb
+++ b/non_supervised_analysis/notebooks/dataset_3/1_instacart_data_profiling USER.ipynb
@@ -475,6 +475,281 @@
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "user_id",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "total_orders",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "mean_products",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "max_products",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "std_num_products",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "mean_lag_between_orders",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "std_lag_between_orders",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "mean_reorder_rate",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "mean_weekend_order_rate",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "mean_order_dow",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "top_order_dow",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "order_dow_variety",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "top_order_hour",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "order_hour_variety",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "std_order_hour",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "mean_peak_time_of_day_rate",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "top_order_time_of_day_enc",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "order_time_of_day_enc_variety",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "8169a72b-23de-4219-88cf-b94e671b2a18",
+       "rows": [
+        [
+         "count",
+         "206209.0",
+         "206209.0",
+         "206209.0",
+         "206209.0",
+         "206209.0",
+         "206209.0",
+         "206209.0",
+         "206209.0",
+         "206209.0",
+         "206209.0",
+         "206209.0",
+         "206209.0",
+         "206209.0",
+         "206209.0",
+         "206209.0",
+         "206209.0",
+         "206209.0",
+         "206209.0"
+        ],
+        [
+         "mean",
+         "103105.0",
+         "15.590367054784224",
+         "11.839973938169763",
+         "17.654864724624048",
+         "3.9492046257136386",
+         "15.469669692770578",
+         "6.616467127932731",
+         "0.43224927158754395",
+         "0.26636756142733214",
+         "2.75005462545356",
+         "2.5212478601806905",
+         "4.688723576565524",
+         "13.265560669029965",
+         "7.1937888258999365",
+         "3.309919167950379",
+         "0.7320758363549643",
+         "1.673876288844024",
+         "2.8386685353209606"
+        ],
+        [
+         "std",
+         "59527.55516705407",
+         "16.65477350115558",
+         "6.64159060548057",
+         "10.192817970852538",
+         "2.5445863705959013",
+         "7.20743594965738",
+         "3.2685278914940787",
+         "0.2121440380259107",
+         "0.21657046322773416",
+         "1.0141360929131686",
+         "2.1468383822892028",
+         "1.6826482788492763",
+         "3.999611194177244",
+         "3.8749142758537403",
+         "1.4848465707077518",
+         "0.2376975098280952",
+         "1.741754467595398",
+         "0.8187943321080882"
+        ],
+        [
+         "min",
+         "1.0",
+         "3.0",
+         "1.0",
+         "1.0",
+         "0.0",
+         "0.0",
+         "0.0",
+         "0.0",
+         "0.0",
+         "0.0",
+         "0.0",
+         "1.0",
+         "0.0",
+         "1.0",
+         "0.0",
+         "0.0",
+         "-1.5707963267948966",
+         "1.0"
+        ],
+        [
+         "25%",
+         "51553.0",
+         "5.0",
+         "7.071428571428571",
+         "10.0",
+         "2.1067731340827938",
+         "9.55379746835443",
+         "4.231001392604315",
+         "0.2678571428571428",
+         "0.0979381443298969",
+         "2.113636363636364",
+         "1.0",
+         "3.0",
+         "10.0",
+         "4.0",
+         "2.2923919230238394",
+         "0.5876288659793815",
+         "1.5707963267948966",
+         "2.0"
+        ],
+        [
+         "50%",
+         "103105.0",
+         "9.0",
+         "10.785714285714286",
+         "16.0",
+         "3.4685275104438023",
+         "14.692307692307692",
+         "7.033376359698344",
+         "0.4285714285714285",
+         "0.2387096774193548",
+         "2.7534246575342465",
+         "2.0",
+         "5.0",
+         "13.0",
+         "6.0",
+         "3.1704807288403503",
+         "0.7727272727272727",
+         "1.5707963267948966",
+         "3.0"
+        ],
+        [
+         "75%",
+         "154657.0",
+         "19.0",
+         "15.433333333333334",
+         "23.0",
+         "5.232778154395115",
+         "20.724409448818896",
+         "9.037772046541864",
+         "0.5957446808510638",
+         "0.3888888888888889",
+         "3.370748299319728",
+         "5.0",
+         "6.0",
+         "16.0",
+         "10.0",
+         "4.162511706622888",
+         "0.9375",
+         "3.141592653589793",
+         "3.0"
+        ],
+        [
+         "max",
+         "206209.0",
+         "99.0",
+         "78.55160142348754",
+         "145.0",
+         "46.80321008416643",
+         "30.0",
+         "21.213203435596427",
+         "0.9895287958115184",
+         "1.0",
+         "6.0",
+         "6.0",
+         "7.0",
+         "23.0",
+         "24.0",
+         "12.16552506059644",
+         "1.0",
+         "3.141592653589793",
+         "4.0"
+        ]
+       ],
+       "shape": {
+        "columns": 18,
+        "rows": 8
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
