--- a/non_supervised_analysis/notebooks/dataset_3/0_instacart_pre_processing.ipynb
+++ b/non_supervised_analysis/notebooks/dataset_3/0_instacart_pre_processing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "(32434489, 9)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,11 +208,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "order_id",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "product_id",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "add_to_cart_order",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "reordered",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "user_id",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "order_number",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "order_dow",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "order_hour_of_day",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "days_since_prior_order",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "35cbdd5d-d089-4fe9-8fff-3722f6f1d0cc",
+       "rows": [
+        [
+         "count",
+         "32434489.0",
+         "32434489.0",
+         "32434489.0",
+         "32434489.0",
+         "32434489.0",
+         "32434489.0",
+         "32434489.0",
+         "32434489.0",
+         "30356421.0"
+        ],
+        [
+         "mean",
+         "1710748.5189427834",
+         "25576.337535424096",
+         "8.351075517175559",
+         "0.5896974667922161",
+         "102937.23942319548",
+         "17.142050210811092",
+         "2.7388176826217303",
+         "13.424977405995204",
+         "11.104074258292833"
+        ],
+        [
+         "std",
+         "987300.6964527412",
+         "14096.689090430387",
+         "7.126671160711698",
+         "0.49188857680951814",
+         "59466.478267885126",
+         "17.535040493921123",
+         "2.09004908085805",
+         "4.246364995837531",
+         "8.778914323268735"
+        ],
+        [
+         "min",
+         "2.0",
+         "1.0",
+         "1.0",
+         "0.0",
+         "1.0",
+         "1.0",
+         "0.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "25%",
+         "855943.0",
+         "13530.0",
+         "3.0",
+         "0.0",
+         "51421.0",
+         "5.0",
+         "1.0",
+         "10.0",
+         "5.0"
+        ],
+        [
+         "50%",
+         "1711048.0",
+         "25256.0",
+         "6.0",
+         "1.0",
+         "102611.0",
+         "11.0",
+         "3.0",
+         "13.0",
+         "8.0"
+        ],
+        [
+         "75%",
+         "2565514.0",
+         "37935.0",
+         "11.0",
+         "1.0",
+         "154391.0",
+         "24.0",
+         "5.0",
+         "16.0",
+         "15.0"
+        ],
+        [
+         "max",
+         "3421083.0",
+         "49688.0",
+         "145.0",
+         "1.0",
+         "206209.0",
+         "99.0",
+         "6.0",
+         "23.0",
+         "30.0"
+        ]
+       ],
+       "shape": {
+        "columns": 9,
+        "rows": 8
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -376,7 +534,7 @@
        "max              3.000000e+01  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,11 +650,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "user_id",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "total_orders",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "mean_products",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "max_products",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "std_num_products",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "mean_lag_between_orders",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "std_lag_between_orders",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "mean_reorder_rate",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "mean_weekend_order_rate",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "mean_order_dow",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "top_order_dow",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "order_dow_variety",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "top_order_hour",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "order_hour_variety",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "std_order_hour",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "mean_peak_time_of_day_rate",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "top_order_time_of_day_enc",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "order_time_of_day_enc_variety",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "447abd0d-ca1e-4f50-9121-6123c3937422",
+       "rows": [
+        [
+         "0",
+         "1",
+         "10",
+         "6.254237288135593",
+         "9",
+         "1.5821550159348143",
+         "20.25925925925926",
+         "9.30446268497245",
+         "0.6949152542372882",
+         "0.0",
+         "2.6440677966101696",
+         "4",
+         "4",
+         "7",
+         "7",
+         "3.5003548288034687",
+         "1.0",
+         "1.5707963267948966",
+         "2"
+        ],
+        [
+         "1",
+         "2",
+         "14",
+         "16.107692307692307",
+         "26",
+         "5.469097091624992",
+         "15.967032967032967",
+         "9.119768521646256",
+         "0.47692307692307695",
+         "0.03076923076923077",
+         "2.005128205128205",
+         "2",
+         "5",
+         "9",
+         "5",
+         "1.649854406059765",
+         "1.0",
+         "1.5707963267948966",
+         "2"
+        ],
+        [
+         "2",
+         "3",
+         "12",
+         "7.886363636363637",
+         "11",
+         "2.0422650158547797",
+         "11.487179487179487",
+         "4.869047720820336",
+         "0.625",
+         "0.0",
+         "1.0113636363636365",
+         "0",
+         "4",
+         "16",
+         "6",
+         "1.4545985165347575",
+         "0.5681818181818182",
+         "3.141592653589793",
+         "2"
+        ],
+        [
+         "3",
+         "4",
+         "5",
+         "4.555555555555555",
+         "7",
+         "2.120549934838553",
+         "15.357142857142858",
+         "8.58090135894057",
+         "0.05555555555555555",
+         "0.5",
+         "4.722222222222222",
+         "4",
+         "3",
+         "15",
+         "3",
+         "1.7452081921613032",
+         "1.0",
+         "3.141592653589793",
+         "2"
+        ],
+        [
+         "4",
+         "5",
+         "4",
+         "10.027027027027026",
+         "12",
+         "2.315245205234289",
+         "14.5",
+         "4.263801121065568",
+         "0.3783783783783784",
+         "0.0",
+         "1.6216216216216217",
+         "3",
+         "3",
+         "18",
+         "3",
+         "2.588957841043903",
+         "0.5405405405405406",
+         "3.141592653589793",
+         "2"
+        ]
+       ],
+       "shape": {
+        "columns": 18,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -690,7 +1060,7 @@
        "4                              2  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,36 +1147,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Apply the sampling to each group 20%\n",
-    "sample=0.20"
+    "sample=0.10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "if test_data==False:\n",
     "    \n",
-    "    sample_data = sample_user_orders(data, fraction=sample)\n",
+    "    sample_data = sample_user_orders(data, fraction=0.2)\n",
     "\n",
     "    sample_data.to_csv('data/instacart_pre_proc_sample.csv',index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "if test_data==False:\n",
     "    \n",
-    "    users_df_sample=user_agg.sample(frac=sample)\n",
+    "    users_df_sample=user_agg.sample(frac=0.5)\n",
     "    \n",
     "    users_df_sample.to_csv('data/instacart_user_pre_proc_sample.csv',index=False)\n"
    ]
