--- a/scripts/G02_notebook_dataset1.ipynb
+++ b/scripts/G02_notebook_dataset1.ipynb
@@ -40,11 +40,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/Users/lourefra/Documents/Mercedes-benz.io/TRAINING/post graduation course IST - Data science/projeto curso/ist_dash_2024_rec/non_supervised_analysis/notebooks/dataset_1/_0_citibike_data_pre_processing.ipynb'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 19\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# Iterate through each notebook and append its cells to the merged notebook\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m notebook_path \u001b[38;5;129;01min\u001b[39;00m notebooks:\n\u001b[0;32m---> 19\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(notebook_path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m, encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m     20\u001b[0m         nb \u001b[38;5;241m=\u001b[39m nbformat\u001b[38;5;241m.\u001b[39mread(f, as_version\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m)\n\u001b[1;32m     21\u001b[0m         \u001b[38;5;66;03m# Add a markdown cell to indicate the start of a new notebook\u001b[39;00m\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/IPython/core/interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    322\u001b[0m     )\n\u001b[0;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m io_open(file, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/lourefra/Documents/Mercedes-benz.io/TRAINING/post graduation course IST - Data science/projeto curso/ist_dash_2024_rec/non_supervised_analysis/notebooks/dataset_1/_0_citibike_data_pre_processing.ipynb'"
+     ]
+    }
+   ],
+   "source": [
+    "import nbformat\n",
+    "from nbformat.v4 import new_notebook, new_markdown_cell\n",
+    "\n",
+    "# List of notebook file paths to merge\n",
+    "notebooks = [\n",
+    "    r'/Users/lourefra/Documents/Mercedes-benz.io/TRAINING/post graduation course IST - Data science/projeto curso/ist_dash_2024_rec/non_supervised_analysis/notebooks/dataset_1/_0_citibike_data_pre_processing.ipynb',\n",
+    "    r'/Users/lourefra/Documents/Mercedes-benz.io/TRAINING/post graduation course IST - Data science/projeto curso/ist_dash_2024_rec/non_supervised_analysis/notebooks/dataset_1/_1_citibike_data_profiling.ipynb',\n",
+    "    r'/Users/lourefra/Documents/Mercedes-benz.io/TRAINING/post graduation course IST - Data science/projeto curso/ist_dash_2024_rec/non_supervised_analysis/notebooks/dataset_1/_1_citibike_clustering.ipynb',\n",
+    "    r'/Users/lourefra/Documents/Mercedes-benz.io/TRAINING/post graduation course IST - Data science/projeto curso/ist_dash_2024_rec/non_supervised_analysis/notebooks/dataset_1/_1_citibike_pattern_analysis.ipynb'\n",
+    "\n",
+    "\n",
+    "]\n",
+    "\n",
+    "# Create a new notebook\n",
+    "merged_notebook = new_notebook()\n",
+    "\n",
+    "# Iterate through each notebook and append its cells to the merged notebook\n",
+    "for notebook_path in notebooks:\n",
+    "    with open(notebook_path, 'r', encoding='utf-8') as f:\n",
+    "        nb = nbformat.read(f, as_version=4)\n",
+    "        # Add a markdown cell to indicate the start of a new notebook\n",
+    "        merged_notebook.cells.append(new_markdown_cell(f'# Merged from {notebook_path}'))\n",
+    "        merged_notebook.cells.extend(nb.cells)\n",
+    "\n",
+    "# Save the merged notebook\n",
+    "with open('C:/Data/Coding/Python/ist_dash_2024_rec/non_supervised_analysis/notebooks/dataset_1/G02_notebook_dataset1.ipynb', 'w', encoding='utf-8') as f:\n",
+    "    nbformat.write(merged_notebook, f)\n",
+    "\n",
+    "print('Notebooks merged successfully into merged_notebook.ipynb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
